@@ -66,12 +66,16 @@ export class RpcService {
     rpcOptions?: any,
     maxRetries?: number
   ): Observable<any> {
-    const body = JSON.stringify({
+    const body: Record<string, any> = {
       service: rpcService,
-      method: rpcMethod,
-      params: _.defaultTo(rpcParams, null),
-      options: _.defaultTo(rpcOptions, null)
-    });
+      method: rpcMethod
+    };
+    if (!(_.isUndefined(rpcParams) || _.isNull(rpcParams))) {
+      body.params = rpcParams;
+    }
+    if (!(_.isUndefined(rpcParams) || _.isNull(rpcParams))) {
+      body.options = rpcOptions;
+    }
     return this.http.post(this.url, body).pipe(
       retryDelayed(maxRetries),
       map((res: RpcResponse) => res.response)
@@ -160,11 +164,12 @@ export class RpcService {
    */
   download(rpcService: string, rpcMethod: string, rpcParams: any) {
     this.ngZone.runOutsideAngular(() => {
-      const body = new URLSearchParams();
-      body.set('service', rpcService);
-      body.set('method', rpcMethod);
+      const body: Record<string, any> = {
+        service: rpcService,
+        method: rpcMethod
+      };
       if (!(_.isUndefined(rpcParams) || _.isNull(rpcParams))) {
-        body.set('params', JSON.stringify(rpcParams));
+        body.params = rpcParams;
       }
       const request = new XMLHttpRequest();
       request.open('POST', 'download.php', true);
@@ -195,7 +200,7 @@ export class RpcService {
           reader.readAsText(request.response);
         }
       };
-      request.send(body);
+      request.send(JSON.stringify(body));
     });
   }
 
@@ -203,7 +208,7 @@ export class RpcService {
    * Poll the executed task until it has been finished.
    *
    * @param filename The name of the background process status file.
-   * @param period The poll interval in milliseconds. Defaults to
+   * @param pollPeriod The poll interval in milliseconds. Defaults to
    *   500 milliseconds.
    * @param maxRetries Number of retry attempts before failing.
    * @return Returns an Observable containing the RPC response.
